# cipher-detective-ai

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  Makefile  README.md  SECURITY.md  app.py  core.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  sync-to-hf-space.yml
data/: cipher_examples.jsonl
data/splits/: test.jsonl  train.jsonl  val.jsonl
docs/: README.md  cryptanalysis-cheatsheet.md  ecosystem.md  educational-boundary.md
examples/: sample_ciphertexts.md
hf_cards/: dataset_README.md  model_README.md
screenshots/: README.md
scripts/: balance_dataset.py  convert_museum_corpus.py  evaluate_baseline.py  generate_dataset.py  train_transformer.py
tests/: conftest.py  test_core.py
training_space/: README.md  app.py  requirements.txt
