[project]
name = "cipher-detective-ai"
version = "0.1.0"
description = "Educational classical-cryptanalysis exhibit (Hugging Face Space + dataset + model)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "systemslibrarian" }]
keywords = [
  "cryptography",
  "cryptanalysis",
  "classical-ciphers",
  "education",
  "huggingface",
  "transformers",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/systemslibrarian/cipher-detective-ai"
Space    = "https://huggingface.co/spaces/systemslibrarian/cipher-detective-ai"
Issues   = "https://github.com/systemslibrarian/cipher-detective-ai/issues"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
